syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


option go_package = "github.com/ArtEmerged/o_auth/pkg/auth_v1;auth_v1";

service UserV1 {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    ADMIN = 2;
}

message UserInfo {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    oneof timestamp {
        google.protobuf.Timestamp created_at = 5;
        google.protobuf.Timestamp updated_at = 6;
    }
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id =1;
}

message GetUserResponse {
    UserInfo user_info = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    optional string name = 2;
    Role role = 4;
}

message DeleteUserRequest {
    int64 id = 1;
}
